--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a {
+  text-decoration: none;
+}
+
+.body-card {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 8px;
+  background: white;
+  border-radius: 4px;
+  box-shadow: 0px 0px 2px 0px #747474;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.white-background {
+  background-color: #fff;
+}
